--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "how2read",
+  "version": "1.0.0",
+  "description": "程序员最容易读错的单词",
   "private": true,
   "scripts": {
     "prod": "gulp --production",
@@ -6,7 +9,12 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.3.0"
+    "gulp-cleancss": "^0.2.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-sass": "^2.0.3",
+    "underscore": "^1.8.3",
+    "vinyl-paths": "^1.0.0",
+    "del": "^1.2.0"
   }
 }
